--- a/actually-web-main/src/app/globals.css
+++ b/actually-web-main/src/app/globals.css
@@ -2,32 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply bg-woodsmoke-950 text-white font-inter;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+select {
+  @apply bg-white border-none text-woodsmoke-950 rounded-full font-inter;
+}
+
+button {
+  @apply bg-transparent border-white text-white rounded-full font-inter;
+}
+
+primary-button {
+  @apply bg-white border-none text-woodsmoke-950 rounded-none font-inter;
 }
